<resources>
    <string name="app_name">Carlogger</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="nav_all">Übersicht</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_repair_service">Reparaturen &amp; Service</string>
    <string name="navigation_drawer_fuel">Tanken</string>
    <string name="navigation_drawer_reminder">Erinnerungen</string>
    <string name="navigation_drawer_other_costs">Andere Kosten</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fuel_fragment">Hello fuel fragment</string>
    <string name="hello_repair_fragment">Hello repair fragment</string>


    <!-- fragmentFuel -->
    <string name="fuelFragment_title">Tanken</string>
    <string name="fuelFragment_allCost">Gesamtkosten für Tanken</string>
    <string name="fuelFragment_monthCost">Kosten Pro Monat</string>
    <string name="fuelFragment_periodCost">Kosten für Zeitraum</string>
    <string name="fuelFragment_fuelConsumption">Verbrauch (L/100KM)</string>
    <string name="fuelFragment_monthCostOther">Kosten Pro Monat anderer Fahrer</string>
    <string name="fuelFragment_fuelConsumptionOther">Verbrauch (L/100KM) anderer Fahrer</string>

    <!--FuelAddActivity -->
    <string name="fuel_add_title">Tankfüllung hinzufügen</string>
    <string name="fuel_add_quantity">Menge in Liter</string>
    <string name="fuel_add_cost_per_litre">Kosten/Liter</string>
    <string name="fuel_add_km">Kilometerstand</string>
    <string name="fuel_add_cb_full">Vollgetankt</string>


    <string name="fuel_add_error_quantity">Bitte Menge eingeben</string>
    <string name="fuel_add_error_cost">Bitte Kosten/Liter eingeben €</string>

    <!-- FuelDialogFragmen -->
    <string name="fuelDialogFragment_info">Realistische Verbrauchs-Berechnung nur möglich wenn 2 mal hintereinander eine Vollbetankung
    durchgeführt wurde (Tank muss nicht zwangsläufig leer sein, sollte nach dem Tankvorgang jedoch voll sein).</string>
    <string name="fuelDialogFragment_ok">OK</string>

    <!-- FabAddMenu -->
    <string name="fabAdd_label">Hinzufügen</string>
    <string name="fabAdd_fuel">Tanken</string>
    <string name="fabAdd_reminder">Erinnerung</string>
    <string name="fabAdd_otherCost">Andere Kosten</string>
    <string name="fabAdd_repair_service">Reparatur oder Service</string>

    <!-- fragmentRepair -->
    <string name="repairFragment_title">Reparaturen &amp; Service</string>
    <string name="repairFragment_allCost">Gesamtkosten für Reparaturen &amp; Service</string>
    <string name="repairFragment_monthCost">Kosten Pro Monat</string>
    <string name="repairFragment_periodCost">Kosten für Zeitraum</string>
    <string name="repairFragment_monthCostOther">Kosten Pro Monat anderer Fahrer</string>

    <!--RepairAddActivity -->
    <string name="repair_add_title">Reparatur &amp; Service hinzufügen</string>
    <string name="repair_add_type">Art</string>
    <string name="repair_add_cost">Gesamtkosten</string>
    <string name="repair_add_part_cost">Teilekosten</string>
    <string name="repair_add_labor_cost">Arbeitskosten</string>
    <string name="repair_add_description">Beschreibung/Ersetzte Teile</string>
    <string name="repair_add_bill">Rechnung</string>

    <string name="photo_error">Rechnungsfoto konnte nicht erstellt werden</string>

    <string-array name="repair_type">
        <item>Reparatur (Werkstatt)</item>
        <item>Reparatur</item>
        <item>TÜV</item>
        <item>Inspektion</item>
        <item>Andere</item>
    </string-array>


    <string name="error_cost">Bitte Kosten angeben</string>


    <!-- fragmentOtherCost -->
    <string name="otherCostFragment_title">Andere Kosten</string>
    <string name="otherCostFragment_allCost">Gesamtkosten für Andere Kosten</string>
    <string name="otherCostFragment_monthCost">Kosten Pro Monat</string>
    <string name="otherCostFragment_periodCost">Kosten für Zeitraum</string>
    <string name="otherCostFragment_monthCostOther">Kosten Pro Monat anderer Fahrer</string>

    <!--OtherCostAddActivity -->
    <string name="other_cost_add_title">Andere Kosten hinzufügen</string>
    <string name="other_cost_add_cost">Kosten</string>
    <string name="other_cost_add_description">Beschreibung</string>


    <!-- Reminder -->
    <string name="reminder_fragment_title">Erinnerungen</string>


    <!--ReminderAddActivity-->
    <string name="reminder_add_title">Erinnerung hinzufügen</string>
    <string name="reminder_add_description">Beschreibung/Name</string>
    <string name="reminder_cb_push">Push Notification</string>
    <string name="reminder_cb_push_withTime">Push Notification (%1$s)</string>

    <string name="error_description">Bitte Beschreibung eingeben</string>

    <string name="ad_push_notification_title">Wann soll die Benachrichtigung erfolgen?</string>
    <string name="ad_push_notification_1">1 Stunde vorher</string>
    <string name="ad_push_notification_2">2 Stunden vorher</string>
    <string name="ad_push_notification_3">3 Stunden vorher</string>
    <string name="ad_push_notification_24">24 Stunden vorher</string>


    <!--AutoEntry-->
    <string name="add_cb_auto_entry">Automatischer Eintrag</string>
    <string name="add_cb_auto_entry_with_time">Automatischer Eintrag (%1$s)</string>

    <string name="ad_auto_entry_title">Diesen Eintrag Automatisch einfügen</string>
    <string name="ad_auto_entry_daily">Täglich</string>
    <string name="ad_auto_entry_weekly">Wöchentlich</string>
    <string name="ad_auto_entry_monthly">Monatlich</string>
    <string name="ad_auto_entry_yearly">Jährlich</string>
    <string name="ad_auto_entry_everytwoyear">Alle zwei Jahre</string>


    <!--DatePickerAlert -->
    <string name="datePicker_from">Von</string>
    <string name="datePicker_to">Bis</string>
    <string name="datePicker_periodWithDate">Kosten für Zeitraum %1$d.%2$d.%3$d - %4$d.%5$d.%6$d</string>


    <string name="input_error">Fehlerhafte Eingabe</string>

    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="km">KM</string>
    <string name="litre">Liter</string>
    <string name="euro">€</string>
    <string name="euro_per_litre">€/Liter</string>

    <string name="allFragment_allCost">Gesamtkosten</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginDialog_title">Mit Google anmelden</string>
    <string name="pressBackAgain">Tippen Sie ein zweites Mal auf Zurück zum beenden</string>
    <string name="login">Einloggen</string>
    <string name="logout">Ausloggen</string>
    <string name="login_logout">Login/Logout</string>
    <string name="chooseCar">Auto wählen</string>
    <string name="action_search">action_search</string>

    <string name="add_car">Auto hinzufügen</string>
    <string name="add_edit_car">Auto hinzufügen/bearbeiten</string>
    <string name="delete_car">Auto entfernen</string>


    <!-- car -->
    <string name="car_info_hsn">HSN: </string>
    <string name="car_info_tsn">TSN: </string>
    <string name="car_info_name">Name: </string>
    <string name="car_info_cm3"> Hubraum: </string>
    <string name="car_info_production_years">Zeitraum: </string>
    <string name="car_info_power">Leistung: </string>
    <string name="car_info_fuel">Kraftstoff: </string>

    <string name="car_add_hsntsn">HSN/TSN</string>
    <string name="car_add_name">Name</string>


    <!--<string name="default_web_client_id" translatable="false">409691608244-01q2bthn0ihc8r78tldk6j2p3u3cudth.apps.googleusercontent.com</string>-->


</resources>
