<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_nav_all"
            android:title="@string/nav_all"
            android:visible="true" />
        <item
            android:id="@+id/nav_repair_service"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_repair_service"
            android:visible="true" />
        <item
            android:id="@+id/nav_fuel"
            android:icon="@drawable/ic_action_fuel"
            android:title="@string/navigation_drawer_fuel" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/navigation_drawer_reminder" />
        <item
            android:id="@+id/nav_otherCosts"
            android:icon="@drawable/ic_action_cash"
            android:title="@string/navigation_drawer_other_costs" />
    </group>

    <item
        android:id="@+id/loginlogout"
        android:title="Login/Logout" />

</menu>
