<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.fhbi.mobappproj.carlogger.activities.AddActivities.OtherCostAddActivity"
    tools:showIn="@layout/activity_other_cost_add">

    <ScrollView
        android:id="@+id/otherCostAddSV"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/otherCostAddLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TV_OtherCostAddDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_cost_add_description" />

            <EditText
                android:id="@+id/ET_OtherCostAddDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:ems="10"
                android:selectAllOnFocus="true" />


            <TextView
                android:id="@+id/TV_OtherCostAddCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_cost_add_cost" />

            <EditText
                android:id="@+id/ET_OtherCostAddCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789,."
                android:inputType="number"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:text="0,00" />



            <CheckBox
                android:id="@+id/CB_OtherCostAddAutoEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_cb_auto_entry" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
